--- a/src/bin/scripts/po/sv.po
+++ b/src/bin/scripts/po/sv.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PostgreSQL 14\n"
+"Project-Id-Version: PostgreSQL 13\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
-"POT-Creation-Date: 2021-11-07 10:28+0000\n"
-"PO-Revision-Date: 2021-11-07 15:07+0100\n"
+"POT-Creation-Date: 2021-11-08 22:28+0000\n"
+"PO-Revision-Date: 2021-11-09 06:34+0100\n"
 "Last-Translator: Dennis Björklund <db@zigo.dhs.org>\n"
 "Language-Team: Swedish <pgsql-translators@postgresql.org>\n"
 "Language: sv\n"
@@ -480,7 +480,7 @@ msgstr "Lösenorden stämde inte överens.\n"
 
 #: createuser.c:225
 msgid "Shall the new role be a superuser?"
-msgstr "Skall den nya rollen vara en superanvändare?"
+msgstr "Skall den nya rollen vara en superuser?"
 
 #: createuser.c:240
 msgid "Shall the new role be allowed to create databases?"
@@ -576,12 +576,12 @@ msgstr "  -R, --no-createrole       rollen kan inte skapa roller (standard)\n"
 #: createuser.c:370
 #, c-format
 msgid "  -s, --superuser           role will be superuser\n"
-msgstr "  -s, --superuser           rollen blir en superanvändare\n"
+msgstr "  -s, --superuser           rollen blir en superuser\n"
 
 #: createuser.c:371
 #, c-format
 msgid "  -S, --no-superuser        role will not be superuser (default)\n"
-msgstr "  -S, --no-superuser        rollen blir inte superanvändare (standard)\n"
+msgstr "  -S, --no-superuser        rollen blir inte superuser (standard)\n"
 
 #: createuser.c:373
 #, c-format
