--- a/src/bin/pg_ctl/po/ja.po
+++ b/src/bin/pg_ctl/po/ja.po
@@ -1,11 +1,15 @@
-# Japanese message translation file for pg_ctl
-# Copyright (C) 2021 PostgreSQL Global Development Group
-# This file is distributed under the same license as the pg_archivecleanup (PostgreSQL) package.
-# Shigehiro Honda <fwif0083@mb.infoweb.ne.jp>, 2005
+# pg_ctl.po
+#   Japanese message translation file for pg_ctl
+#
+# Copyright (C) 2005-2022 PostgreSQL Global Development Group
+#
+# Shigehiro Honda <fwif0083@mb.infoweb.ne.jp>, 2005.
+#
+# This file is distributed under the same license as the PostgreSQL package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: pg_ctl (PostgreSQL 13)\n"
+"Project-Id-Version: pg_ctl (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-25 17:21+0900\n"
 "PO-Revision-Date: 2021-08-19 17:35+0900\n"
