--- a/src/bin/pg_resetwal/po/ja.po
+++ b/src/bin/pg_resetwal/po/ja.po
@@ -1,11 +1,15 @@
-# Japanese message translation file for pg_resetwal
-# Copyright (C) 2021 PostgreSQL Global Development Group
-# This file is distributed under the same license as the pg_archivecleanup (PostgreSQL) package.
-# Shigehiro Honda <fwif0083@mb.infoweb.ne.jp>, 2005
+# pg_resetwal.po
+#   Japanese message translation file for pg_resetwal
+#
+# Copyright (C) 2005-2022 PostgreSQL Global Development Group
+#
+# Shigehiro Honda <fwif0083@mb.infoweb.ne.jp>, 2005.
+#
+# This file is distributed under the same license as the PostgreSQL package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: pg_resetwal (PostgreSQL 13)\n"
+"Project-Id-Version: pg_resetwal (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-25 17:22+0900\n"
 "PO-Revision-Date: 2021-08-25 11:21+0900\n"
@@ -596,7 +600,7 @@ msgstr "  -f, --force                     強制的に更新を実施\n"
 #: pg_resetwal.c:1226
 #, c-format
 msgid "  -l, --next-wal-file=WALFILE      set minimum starting location for new WAL\n"
-msgstr "  -l, --next-wal-file=WALFILE     新しいWALの最小開始ポイントを設定\n"
+msgstr "  -l, --next-wal-file=WALFILE     新しいWALの最小開始位置を設定\n"
 
 #: pg_resetwal.c:1227
 #, c-format
