--- a/src/interfaces/ecpg/ecpglib/po/ja.po
+++ b/src/interfaces/ecpg/ecpglib/po/ja.po
@@ -1,10 +1,10 @@
 # Japanese message translation file for ecpglib
-# Copyright (C) 2021 PostgreSQL Global Development Group
+# Copyright (C) 2022 PostgreSQL Global Development Group
 # This file is distributed under the same license as the pg_archivecleanup (PostgreSQL) package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ecpglib (PostgreSQL 12 beta 1)\n"
+"Project-Id-Version: ecpglib (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-20 15:39+0900\n"
 "PO-Revision-Date: 2021-08-19 15:13+0900\n"
