--- a/src/interfaces/ecpg/preproc/po/ja.po
+++ b/src/interfaces/ecpg/preproc/po/ja.po
@@ -1,10 +1,10 @@
 # Japanese message translation file for ecpg-preproc
-# Copyright (C) 2021 PostgreSQL Global Development Group
+# Copyright (C) 2022 PostgreSQL Global Development Group
 # This file is distributed under the same license as the pg_archivecleanup (PostgreSQL) package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ecpg-preproc (PostgreSQL 12 beta 1)\n"
+"Project-Id-Version: ecpg-preproc (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-25 17:29+0900\n"
 "PO-Revision-Date: 2021-08-25 17:34+0900\n"
