--- a/src/interfaces/ecpg/preproc/po/ja.po
+++ b/src/interfaces/ecpg/preproc/po/ja.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ecpg-preproc (PostgreSQL 14)\n"
+"Project-Id-Version: ecpg (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-25 17:29+0900\n"
 "PO-Revision-Date: 2021-08-25 17:34+0900\n"
