--- a/src/bin/pg_test_timing/po/uk.po
+++ b/src/bin/pg_test_timing/po/uk.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: postgresql\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
-"POT-Creation-Date: 2020-09-21 21:16+0000\n"
-"PO-Revision-Date: 2020-09-22 13:43\n"
+"POT-Creation-Date: 2022-02-12 19:00+0000\n"
+"PO-Revision-Date: 2022-06-19 10:10\n"
 "Last-Translator: \n"
 "Language-Team: Ukrainian\n"
 "Language: uk_UA\n"
@@ -14,7 +14,7 @@ msgstr ""
 "X-Crowdin-Project: postgresql\n"
 "X-Crowdin-Project-ID: 324573\n"
 "X-Crowdin-Language: uk\n"
-"X-Crowdin-File: /DEV_13/pg_test_timing.pot\n"
+"X-Crowdin-File: /REL_13_STABLE/pg_test_timing.pot\n"
 "X-Crowdin-File-ID: 508\n"
 
 #: pg_test_timing.c:55
@@ -25,7 +25,7 @@ msgstr "Використання: %s [-d ТРИВАЛІСТЬ]\n"
 #: pg_test_timing.c:75 pg_test_timing.c:87 pg_test_timing.c:104
 #, c-format
 msgid "Try \"%s --help\" for more information.\n"
-msgstr "Спробуйте \"%s --help\" для отримання додаткової інформації.\n"
+msgstr "Спробуйте \"%s --help\" для додаткової інформації.\n"
 
 #: pg_test_timing.c:85
 #, c-format
