--- a/src/bin/psql/po/sv.po
+++ b/src/bin/psql/po/sv.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PostgreSQL 13\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2022-02-18 04:28+0000\n"
-"PO-Revision-Date: 2021-11-12 23:29+0100\n"
+"PO-Revision-Date: 2022-05-14 07:32+0200\n"
 "Last-Translator: Dennis Björklund <db@zigo.dhs.org>\n"
 "Language-Team: Swedish <pgsql-translators@postgresql.org>\n"
 "Language: sv\n"
@@ -2845,7 +2845,7 @@ msgstr "  \\endif                 avsluta villkorsblock\n"
 #: help.c:225
 #, c-format
 msgid "Informational\n"
-msgstr "Informationer\n"
+msgstr "Information\n"
 
 #: help.c:226
 #, c-format
